<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_290sdp"
    android:layout_height="@dimen/_140sdp"
    android:layout_marginStart="16dp"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_130sdp"
        app:cardBackgroundColor="#F1F1F1"
        app:cardCornerRadius="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/TITLE"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/robotobold"
                        android:text="@string/app_name"
                        android:textColor="#D0000000"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.005"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/Payer"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/robotobold"
                        android:text="@string/payer_name"
                        android:textColor="#D0000000"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.005"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TITLE" />


                    <TextView
                        android:id="@+id/DATETIME"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroumed"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.004"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/paisa"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/gilroumed"
                        android:text="@string/_5000"
                        android:textColor="#54BA51"
                        android:textSize="@dimen/_25sdp"
                        app:layout_constraintBottom_toTopOf="@+id/DATETIME"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.005"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Payer"
                        app:layout_constraintVertical_bias="0.343" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:background="@drawable/delete"
                android:contentDescription="@string/DELETE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>