<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".classes.splashactivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="467dp"
        android:background="@drawable/banner"
        android:contentDescription="" />

    <LinearLayout
        android:id="@+id/lout"
        android:layout_width="match_parent"
        android:layout_height="409dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/header"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/bold"
                android:text="@string/esplitt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="27sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.528"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="317dp"
                android:layout_height="105dp"
                android:layout_marginBottom="184dp"
                android:fontFamily="@font/monstrea"
                android:text="@string/splitter_will_make_your_soldieries_so_smooth_all_you_have_to_do_is_just_enter_name_and_amount_only"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/LETSSTART"
                android:layout_width="290dp"
                android:layout_height="57dp"
                android:backgroundTint="#006eff"
                android:fontFamily="@font/robotoregular"
                android:text="@string/let_s_go"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.7" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</RelativeLayout>