<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardBackgroundColor="#FFFDFB"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView

                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gilroumed"
                        android:gravity="center"
                        android:text="@string/are_you_sure_to_exit"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="#FFA400"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/fl_adplaceholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="3dp"
                        android:orientation="vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/round"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/conf_yes_button"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:fontFamily="@font/gilroumed"
                                android:gravity="center"
                                android:text="@string/yes"
                                android:textColor="#0007FF"
                                android:textSize="22dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/round"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/conf_no_button"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:fontFamily="@font/gilroumed"
                                android:gravity="center"
                                android:text="@string/no"
                                android:textColor="#0007FF"
                                android:textSize="22dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
